trouble shooting overflow y issue in service section. made global ctabtn padding larger.

--- a/src/pages/Index.css
+++ b/src/pages/Index.css
@@ -11,12 +11,12 @@ main {
 .hero-section {
   position: relative;
   height: 90vh;
-  top: 0;
 }
 .mobile-hero {
   height: 90vh;
   max-width: 100%;
   position: absolute;
+  top: 0;
   z-index: -1;
 }
 .hero-text-container {
@@ -34,7 +34,8 @@ main {
   flex-direction: column;
 }
 .m-beyond {
-  font-size: clamp(2rem, 5vh, 3rem);
+  /* font-size: clamp(2rem, 5vh, 3rem); */
+  font-size: 5vh;
   text-shadow: 1px 0.5px 4px rgba(0, 0, 0, 0.15);
   font-weight: 900;
   color: var(--mainGold);
@@ -48,7 +49,8 @@ main {
 }
 .m-numbers {
   z-index: 2;
-  font-size: clamp(2rem, 5vh, 3rem);
+  /* font-size: clamp(2rem, 5vh, 3rem); */
+  font-size: 5vh;
   font-weight: 900;
   color: var(--mainGreen);
   margin-block-start: -1.1rem;
@@ -64,17 +66,18 @@ main {
   height: 55%;
 }
 .phrase {
-  font-weight: 300;
+  font-weight: 200;
   text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.1);
   color: #fff;
-  font-size: clamp(1rem, 2.2vw, 2rem);
+  /* font-size: clamp(1rem, 2.2vw, 2rem); */
+  font-size: 2.5vh;
   min-width: max-content;
 }
 .you,
 .business {
   color: var(--mainGold);
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size: 2.65vh;
+  font-weight: 400;
   text-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.2);
 }
 .hero-link {
@@ -102,51 +105,20 @@ main {
   background: var(--darkBoxGradient);
   clip-path: polygon(0 0, 100% 35%, 100% 65%, 0% 100%);
 }
-/* !  MOBILE APPROACH SECTION */
-.approach-img {
-  display: none;
-}
-.approach-svg {
-  display: none;
-}
-.approach-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  height: 55vh;
-  width: 100vw;
-  gap: 3rem;
-  margin-block: 10vh 0;
-  align-items: center;
-}
-.approach-title {
-  font-family: var(--serifFont);
-  font-style: italic;
-  font-size: 3rem;
-  font-weight: 400;
-  width: 100%;
-  color: var(--lightGrey);
-  margin-inline-start: 20%;
-  /* margin-inline: 0 10% ; */
-}
-.summary {
-  font-size: 1rem;
-  align-items: center;
-  width: 80%;
-  line-height: 1.3;
-  text-indent: 0.7rem;
-  color: var(--mainGrey);
-}
+
 /* ! MOBILE SERVICES SECTION */
 .service-title-container {
   display: flex;
   width: 100%;
   height: 10vh;
   margin-block-start: 15vh;
+  /* border: 1px solid red; */
 }
 .services-container {
+  /* border: 1px solid red; */
   margin-block-start: 5vh;
   overflow-x: auto;
+  overflow-y: clip;
   position: relative;
   width: 100vw;
   display: flex;
@@ -169,20 +141,23 @@ main {
   padding-inline: 1rem;
   overflow-x: auto;
   overscroll-behavior-inline: contain;
+  /* border: 1px solid red; */
 }
 .services-box {
   display: grid;
   grid-template-rows: min-content;
-  gap: 2rem;
+  gap: 1.5rem;
   place-items: center;
   color: var(--textLight);
   padding: 1rem;
   border-radius: var(--borderRadius);
   background: var(--boxGradient);
+  /* border: 1px solid red; */
   box-shadow: 10px 10px 5px -6px rgba(0, 0, 0, 0.2);
 }
 .service-title {
   font-family: var(--sansFont);
+  /* border: 1px solid red; */
   font-weight: 400;
   font-size: 1.4rem;
 }
@@ -194,8 +169,8 @@ main {
   scroll-snap-align: start;
 }
 .service-description {
+  /* border: 1px solid red; */
   font-family: var(--sansFont);
-  /* letter-spacing: .25px; */
   text-align: center;
   font-size: 0.75rem;
   font-weight: 200;
@@ -247,6 +222,41 @@ main {
     hsla(0, 0%, 15%, 1) 100%
   );
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#404040", endColorstr="#262626", GradientType=1 );
+}
+/* !  MOBILE APPROACH SECTION */
+.approach-img {
+  display: none;
+}
+.approach-svg {
+  display: none;
+}
+.approach-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 55vh;
+  width: 100vw;
+  gap: 3rem;
+  margin-block: 10vh 0;
+  align-items: center;
+}
+.approach-title {
+  font-family: var(--serifFont);
+  font-style: italic;
+  font-size: 3rem;
+  font-weight: 400;
+  width: 100%;
+  color: var(--lightGrey);
+  margin-inline-start: 20%;
+  /* margin-inline: 0 10% ; */
+}
+.summary {
+  font-size: 1rem;
+  align-items: center;
+  width: 80%;
+  line-height: 1.3;
+  text-indent: 0.7rem;
+  color: var(--mainGrey);
 }
 /* ! MOBILE TESTIMONIAL SECTION */
 .bracket-svg {
